--- a/css/main.css
+++ b/css/main.css
@@ -20,13 +20,22 @@ body {
     box-sizing: border-box;
     width: 100%;
     height: 1000px;
+}
+
+.homepage,
+.header {
     background-image: url('../img/strawberry.png');
     background-size: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 /* header */
 .header {
     display: flex;
+    position: sticky;
+    top: 0;
+    left: 0;
     padding: 50px 165px;
 }
 
@@ -87,6 +96,13 @@ body {
     font-size: 20px;
     font-family: 'Raleway';
     font-weight: 200;
+    cursor: pointer;
+}
+
+.page-scroll {
+    position: absolute;
+    bottom: 68px;
+    left: calc(50% - 12px);
 }
 
 /* about-us */
