--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,15 @@ body {
     margin: 30px 0;
 }
 
+.page-scroll {
+    position: absolute;
+    bottom: 68px;
+    left: calc(50% - 12px);
+}
+
+/* button */
 .intro__button {
+    box-sizing: border-box;
     width: 200px;
     height: 55px;
     background-color: #ff6033;
@@ -96,13 +104,12 @@ body {
     font-size: 20px;
     font-family: 'Raleway';
     font-weight: 200;
+    transition: all 300ms ease;
     cursor: pointer;
 }
 
-.page-scroll {
-    position: absolute;
-    bottom: 68px;
-    left: calc(50% - 12px);
+.intro__button:active {
+    box-shadow: none;
 }
 
 /* about-us */
