change margin on padding

--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ body {
     color: #262626;
     font-weight: 300;
     line-height: 27px;
-    margin: 258px 165px;
+    padding: 258px 165px;
 }
 
 .intro__title {
